--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transition: opacity 1s ease-in-out; /* 🔥 تأثير سلس عند الصعود */
+    transition: opacity 1s ease-in-out;
 }
 
 #section1 h1 {
