--- a/styles.css
+++ b/styles.css
@@ -100,8 +100,9 @@ body {
     height: 50vh;
     background-color: #111;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 0 20px;
     position: relative;
 }
@@ -110,18 +111,26 @@ body {
     font-size: 1.5em;
     margin: 0;
     color: white;
-    margin-right: 280px;
+    margin-bottom: 20px;
 }
 
 #section2 .part2 .additional-text {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    margin-right: 20px;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+#section2 .part2 .logo-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 #section2 .part2 .logo {
     cursor: pointer;
+    margin-top: 20px;
 }
 
 #section2 .part2 .logo img {
