--- a/styles.css
+++ b/styles.css
@@ -111,21 +111,20 @@ body {
     font-size: 1.5em;
     margin: 0;
     color: white;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
-#section2 .part2 .additional-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
+#section2 .part2 h3 {
+    font-size: 1.5em;
+    margin: 0;
+    color: white;
+    margin-bottom: 10px;
 }
 
-#section2 .part2 .logo-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
+#section2 .part2 p {
+    font-size: 1.2em;
+    margin: 5px 0;
+    color: white;
 }
 
 #section2 .part2 .logo {
